@@ -1,3 +1,8 @@
+2006-03-10  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/libgviewer/viewer-widget.c:
+        i18n
+
 2006-03-09  Assaf Gordon  <agordon88@gmail.com>
 
 	* src/libgviewer/fileops.c:
